--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title>Stratos Show Room</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/src/assets/favicon-48x48.png" />
   </head>
   <body>
     <div id="root"></div>
